# unc

./: CLI.md  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: create_app.rs  dev.rs  mod.rs
src/template/: download.rs  mod.rs  process.rs
src/utils/: cargo.rs  file_ops.rs  git.rs  mod.rs  tailwind.rs  validation.rs
