[package]
name = "unc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
regex = "1.10"
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
