[package]
name = "wenzetu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wenzetu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
indicatif = "0.18.2"
regex = "1.10"
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
toml = "0.9.8"
ctrlc = "3.4"

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.tailwind]
tw-input = ["src/styles/tailwind.css"]
tw-output = "public/output.css"
tw-watch-enabled = true
tw-watch-always = true
tw-optimize-minify = true
tw-optimize-map = false
