[package]
name = "wenzetu"
version = "0.1.0"
description = "Wenzetu CLI"
edition = "2024"
license = "MIT"
repository = "https://github.com/erickweyunga/wenzetu-cli"
readme = "README.md"
keywords = ["cli", "wenzetu-cli", "uncover-web"]
categories = ["command-line-utilities"]
authors = ["Erick Weyunga <erickweyunga@gmail.com>"]

[[bin]]
name = "wenzetu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
indicatif = "0.18.2"
regex = "1.10"
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
toml = "0.9.8"
ctrlc = "3.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
